src/components/Common/UI/DescriptionList/DescriptionList.module.scss
.root {
  width: 100%;

  dt {
    font-weight: var(--g-fontWeightMedium);
    color: var(--g-colorBodyContent);
  }

  dd {
    font-weight: var(--g-fontWeightRegular);
    color: var(--g-colorBodySubContent);
    margin-inline-start: 0;
  }

  &[data-layout='horizontal'] .item {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    gap: toRem(16);

    dt {
      flex-shrink: 0;
    }

    dd {
      text-align: right;
    }
  }
}

.withSeparators .item:not(:last-child) {
  padding-bottom: toRem(16);
  margin-bottom: toRem(16);
  border-bottom: 1px solid var(--g-colorBorderSecondary);
}

